--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,9 @@ hibernate.max.fetch_depth=25
 spring.jpa.hibernate.max_fetch_depth
 
 jwt.key = keykeykeykeykeykeykeykeykeykeykeykeykeykeykeykeykeykey
-mockoon.url = http://localhost:3000/flights
+mockoons.url = http://localhost:3000/flights
+
+
+#bu altta ki swagger'in path'ini degistiriyor yani bu url ile erisiyoruz= http://localhost:8080/api/swagger/swagger-ui/index.html#/
+springdoc.swagger-ui.path=/swagger/index.html
+springdoc.swagger-ui.url=/swagger/flight.yml
